# flet-pkg-app

./: .dockerignore  .gitignore  404.html  Dockerfile  README.md  app.py  config.py  index.html  main.py  pyproject.toml  render.yaml  settings.toml  sitemap.xml
.github/workflows/: ci.yml  deploy-docs.yml
assets/css/: styles.195f876d.css
assets/js/: 1df93b7f.db52bda7.js  393be207.8cfdf53c.js  39c4ab5d.9211ac6e.js  4d54d076.a3b79dca.js  5281b7a2.2039431d.js  964ae018.41f8267f.js  9beb87c2.2d79e590.js  d589d3a7.40889cca.js  e0e4dfcd.889ad30f.js  main.77973523.js  runtime~main.afcd5d3d.js
docs/: docusaurus.config.ts  package-lock.json
docs/api-reference/: index.html
docs/architecture/: index.html
docs/changelog/: index.html
docs/contributing/: index.html
docs/developer-guide/: index.html
docs/docs/: api-reference.md  architecture.md  changelog.md  contributing.md  developer-guide.md  getting-started.md
docs/getting-started/: index.html
docs/src/components/HomepageFeatures/: index.tsx
docs/src/pages/: index.tsx
markdown-page/: index.html
scripts/: build_aab.py
src/core/: config.py  constants.py  exceptions.py  logger.py
src/data/models/: mappers.py
src/data/repositories/: package_repository_impl.py
src/data/sources/: clickhouse_source.py  github_source.py  local_source.py  package_discovery.py  pypi_source.py
src/domain/entities/: __init__.py  package.py
src/domain/repositories/: __init__.py  package_repository.py
src/domain/usecases/: get_home_data.py  get_package_detail.py  search_packages.py  star_package.py
src/presentation/: app.py
src/presentation/components/common/: footer.py  header.py  loading.py  offline_screen.py  package_card.py  pagination.py  search_bar.py  skeleton_card.py
src/presentation/components/sections/: package_section.py  sidebar_filters.py
src/presentation/hooks/: use_auth.py  use_navigation.py  use_packages.py  use_theme.py
src/presentation/navigation/: app_router.py  navigation_service.py
src/presentation/pages/: page_content.py
src/presentation/pages/contribute/: contribute_page.py
src/presentation/pages/guide/: developer_guide_page.py
src/presentation/pages/home/: home_page.py
src/presentation/pages/package_detail/: package_detail_page.py
src/presentation/state_management/: app_context.py  global_state.py  user_state.py
src/presentation/themes/: app_theme.py  colors.py
src/services/: ads_service.py  api_service.py  cache_service.py  local_index_cache.py  package_index_service.py  storage_service.py
src/utils/: formatters.py  text.py  urls.py  validators.py
tests/: conftest.py
tests/integration/: test_home_sections.py  test_navigation.py  test_packages_page.py
tests/unit/: test_cache_lru.py  test_cache_service.py  test_clickhouse_sanitize.py  test_discovery.py  test_formatters.py  test_index_query.py  test_mappers.py  test_package_entity.py  test_router.py
