[project]
name = "flet-pkg-app"
version = "0.1.0"
description = "Flet PKG - Package discovery platform for the Flet ecosystem"
requires-python = ">=3.12"
dependencies = [
    "dynaconf>=3.2.13",
    "flet>=0.84.0",
    "flet-ads>=0.84.0",
    "httpx>=0.28.1",
    "rich>=14.3.3",
    "structlog>=25.5.0",
]

[dependency-groups]
dev = [
    "flet[all]>=0.84.0",
    "numpy>=2.4.4",
    "pillow>=12.1.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=0.24.0",
    "scikit-image>=0.26.0",
]


[tool.flet.android.permission]
"android.permission.INTERNET" = true
"android.permission.ACCESS_NETWORK_STATE" = true

[tool.flet.android.meta_data]
"com.google.android.gms.ads.APPLICATION_ID" = "ca-app-pub-3940256099942544~3347511713"

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["flet-*"]

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint]
select = ["E", "W", "F", "I"]

[tool.ruff.lint.isort]
known-first-party = ["src", "app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "network: tests that download packages from pub.dev (deselect with -m 'not network')",
    "integration: integration tests requiring Flutter SDK (run with -m integration)",
]

[tool.ty.rules]
# Real bug catchers — keep as error
unresolved-reference = "error"
unresolved-import = "error"
# Soft warnings for our code
possibly-unresolved-reference = "warn"
invalid-type-form = "warn"
# Flet's dataclass-based controls generate false positives in ty because:
# - Constructors accept positional str/int but stubs declare keyword-only
# - ft.Icons enum not recognized as valid icon parameter
# - Callback params typed as `object` flagged as non-callable
# - Some control attrs (Tabs.tabs, Dropdown.on_change) missing from stubs
# - Page methods (set_clipboard, open) not in stubs
# These are suppressed until Flet publishes py.typed-compatible stubs.
invalid-argument-type = "ignore"
missing-argument = "ignore"
call-non-callable = "ignore"
unknown-argument = "ignore"
unresolved-attribute = "ignore"

[tool.ty.terminal]
output-format = "concise"
